--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,25 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_url"
+    <ImageView
+        android:id="@+id/movie_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textColor="@color/white"
-        android:layout_margin="8dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-
-
-
-
-        />
+        app:srcCompat="@drawable/movie" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
