--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,3:4"
-        app:srcCompat="@drawable/movie" />
+        app:srcCompat="@drawable/placeholder_bg" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
